[package]
name = "jormungandr-scenario-tests"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2"
bawawa = "0.1.4"
bytes = "0.4"
error-chain = "0.12"
tokio = "0.1"
reqwest = "0.9"
mktemp = "0.4.0"
lazy_static = "1.3"
chain-core           = { path = "../chain-deps/chain-core" }
chain-crypto         = { path = "../chain-deps/chain-crypto" }
chain-addr           = { path = "../chain-deps/chain-addr" }
chain-impl-mockchain = { path = "../chain-deps/chain-impl-mockchain" }
jormungandr-lib = { path = "../jormungandr-lib" }
poldercast = { version = "0.3.1", features = [ "serde_derive" ] }
rand = "0.6"
rand_core = "0.3"
rand_chacha = "0.1"
regex = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"

