[package]
name = "jormungandr-scenario-tests"
version = "0.7.1"
authors = [ "dev@iohk.io" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2"
bawawa = "0.1.5"
bytes = "0.4"
error-chain = "0.12"
tokio = "0.1"
reqwest = "0.9"
mktemp = "0.4.0"
chain-core           = { path = "../chain-deps/chain-core", features = [ "property-test-api" ] }
chain-crypto         = { path = "../chain-deps/chain-crypto", features = [ "property-test-api" ] }
chain-addr           = { path = "../chain-deps/chain-addr", features = [ "property-test-api" ] }
chain-impl-mockchain = { path = "../chain-deps/chain-impl-mockchain", features = [ "property-test-api" ] }
chain-time           = { path = "../chain-deps/chain-time"}
jormungandr-integration-tests = { path = "../jormungandr-integration-tests"}
jormungandr-lib = { path = "../jormungandr-lib" }
poldercast = "0.9"
rand = "0.6"
rand_core = "0.3"
rand_chacha = "0.1"
regex = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.2"
hex = "0.3"
console = "0.7"
indicatif = "0.11"
lazy_static = "1"
