[package]
name = "jormungandr-utils"
version = "0.2.2"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]
edition = "2018"

[dependencies]
bech32 = "0.6"
chain-core      = { path = "../chain-deps/chain-core" }
chain-addr      = { path = "../chain-deps/chain-addr" }
chain-crypto    = { path = "../chain-deps/chain-crypto" }
chain-impl-mockchain = { path = "../chain-deps/chain-impl-mockchain" }
humantime = "1.2"
serde = "1.0"
custom_error = "1.6"
