[package]
name = "jormungandr-watchdog-derive"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "../jormungandr-watchdog/README.md"
repository = "https://github.com/input-output-hk/jormungandr"
description = """
Process and service management and API
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", default-features = false, features = ["derive", "parsing", "proc-macro"] }
quote = "1"
proc-macro2 = "1"
heck = "0.3.0"
proc-macro-error = "0.4.3"
