[package]
name = "jormungandr-watchdog"
version = "0.1.0"
authors = [
        "Nicolas Di Prima <nicolas.diprima@iohk.io>",
    ]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/input-output-hk/jormungandr"
description = """
Process and service management and API
"""

[dependencies]
tokio = { version = "^0.2.9", features = ["sync"] }
futures-util = "0.3"
thiserror = "1.0"
async-trait = "^0.1.22"

[dev-dependencies]
tokio = { version = "^0.2.9", features = ["full"] }