[package]
name = "jormungandr-watchdog"
version = "0.1.0"
authors = [
        "Nicolas Di Prima <nicolas.diprima@iohk.io>",
    ]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/input-output-hk/jormungandr"
description = """
Process and service management and API
"""

[dependencies]
jormungandr-watchdog-derive = { path = "../jormungandr-watchdog-derive" }
tokio = { version = "^0.2.12", features = ["sync", "rt-threaded", "parking_lot", "time"] }
tracing = "^0.1.13"
tracing-futures = "^0.2.3"
futures-util = "0.3"
thiserror = "1.0"
async-trait = "^0.1.22"
clap = "^2.33"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "^0.8"

[dev-dependencies]
approx = "0.3"
tokio = { version = "^0.2.12", features = ["full"] }
tokio-compat = "^0.1.4"
legacy_tokio = { package = "tokio", version = "^0.1.22" }
legacy_futures = { package = "futures", version = "0.1.29" }
tracing-subscriber = "0.2.3"
