[package]
name = "jormungandr"
version = "0.10.0-alpha.3"
authors = [ "dev@iohk.io" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/input-output-hk/jormungandr"
homepage = "https://github.com/input-output-hk/jormungandr#README.md"
documentation = "https://github.com/input-output-hk/jormungandr#USAGE.md"
description = """
Midgard Serpent
"""
edition = "2018"

[dependencies]
arc-swap = "^1.1.0"
async-trait = "=0.1.42" # https://github.com/dtolnay/async-trait/issues/144
juniper = "0.15.3"
juniper_warp = "0.6.2"
base64 = "0.13.0"
bincode = "1.2.1"
bytes = "1.0"
bech32 = "0.7"
chain-addr = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-core = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-crypto = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-network = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-storage   = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-time      = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-vote = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
cardano-legacy-address = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
imhamt = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
error-chain = "0.12"
futures = "0.3.8"
hex = "0.4"
http = "0.2.2"
humantime = "2.0"
jormungandr-lib = { path = "../jormungandr-lib" }
lazy_static = "1.4"
linked-hash-map = "0.5"
poldercast = { git = "https://github.com/primetype/poldercast.git", rev = "8305f1560392a9d26673ca996e7646c8834533ef" }
multiaddr = { package = "parity-multiaddr", version = "0.9" }
rand = "0.7"
rand_chacha = "0.2.2"
rustls = "0.19.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.59"
serde_yaml = "0.8"
structopt = "^0.3"
thiserror = "1.0.21"
tracing = "0.1"
tracing-futures = "0.2"
tracing-gelf = { version = "0.5", optional = true }
tracing-journald = { version = "0.1.0", optional = true }
tracing-subscriber = { version = "0.2", features = ["fmt", "json"] }
tracing-appender = "0.1.2"
tokio = { version = "^1.3", features = ["rt-multi-thread", "time", "sync", "rt", "signal", "test-util"] }
tokio-stream = "0.1.2"
tokio-util = { version = "0.6.0", features = ["time"] }
tonic = "0.4"
lru = "^0.6.1"
warp = { version = "0.3", features = ["tls"] }
pin-project = "1.0"
tokio-compat-02 = "0.2.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dev-dependencies]
rand_core = "0.5"
tokio = { version = "^1.3", features = ["full"] }

[build-dependencies]
versionisator = "1.0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.86"
nix = "0.19.1"

[features]
default = ["codegen-rustfmt"]
with-bench = []
codegen-rustfmt = ["chain-network/codegen-rustfmt"]
integration-test = []
soak-test = []
systemd = ["tracing-journald"]
gelf = ["tracing-gelf"]
