[package]
name = "log-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-futures = "0.2"
tracing-gelf = { version = "0.5", optional = true }
tracing-journald = { version = "0.1.0", optional = true }
tracing-subscriber = { version = "0.2", features = ["fmt", "json"] }
tracing-appender = "0.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.59"
serde_yaml = "0.8"
serde_with = { version = "1.8", features = ["macros"] }
structopt = "^0.3"
thiserror = "1.0.21"
tokio = { version = "^1.4", features = ["rt-multi-thread", "time", "sync", "rt", "signal", "test-util"] }
tokio-stream = { version = "0.1.4", features = ["sync"] }
tokio-util = { version = "0.6.0", features = ["time"] }
lazy_static = "1.4"

[features]
default = []
systemd = ["tracing-journald"]
gelf = ["tracing-gelf"]
