[package]
name = "network-grpc"
version = "0.1.0-dev"
authors = [
    "Nicolas Di Prima <nicolas.diprima@iohk.io>",
    "Vincent Hanquez <vincent.hanquez@iohk.io>",
    "Mikhail Zabaluev <mikhail.zabaluev@iohk.io>",
    "Eelco Dolstra <edolstra@gmail.com>",
    "Alexander Vershilov <alexander.vershilov@gmail.com>",
]
edition = "2018"

[dependencies]
chain-core = { path = "../chain-core" }
network-core = { path = "../network-core" }
bytes = "0.4"
futures = "0.1"
http = "0.1.16"
h2 = "0.1.11"
prost = "0.5"
tokio = "0.1"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-service = "0.2"
tower-util = { git = "https://github.com/tower-rs/tower" }

[dependencies.tower-grpc]
git = "https://github.com/tower-rs/tower-grpc"
rev = "4159eab8cf22324a25967cb33b9288f6501c0922"

[build-dependencies.tower-grpc-build]
git = "https://github.com/tower-rs/tower-grpc"
rev = "4159eab8cf22324a25967cb33b9288f6501c0922"
