[package]
name = "network-grpc"
version = "0.1.0-dev"
authors = [
    "Nicolas Di Prima <nicolas.diprima@iohk.io>",
    "Vincent Hanquez <vincent.hanquez@iohk.io>",
    "Mikhail Zabaluev <mikhail.zabaluev@iohk.io>",
    "Eelco Dolstra <edolstra@gmail.com>",
    "Alexander Vershilov <alexander.vershilov@gmail.com>",
]
edition = "2018"

[dependencies]
chain-core = { path = "../chain-core" }
network-core = { path = "../network-core" }
bytes = "0.4"
futures = "0.1"
http = "0.1.16"
h2 = "0.1.11"
prost = "0.5"
tokio = "0.1"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-service = "0.2"
tower-util = "0.1"

[dependencies.tower-grpc]
git = "https://github.com/tower-rs/tower-grpc"
rev = "0f15ae28f2a765e0cc38fe3d7e02a13aab7bdbd2"

[build-dependencies.tower-grpc-build]
git = "https://github.com/tower-rs/tower-grpc"
rev = "0f15ae28f2a765e0cc38fe3d7e02a13aab7bdbd2"
features = ["tower-h2"]
