[package]
name = "network-grpc"
version = "0.1.0-dev"
authors = [
    "Nicolas Di Prima <nicolas.diprima@iohk.io>",
    "Vincent Hanquez <vincent.hanquez@iohk.io>",
    "Mikhail Zabaluev <mikhail.zabaluev@iohk.io>",
    "Eelco Dolstra <edolstra@gmail.com>",
    "Alexander Vershilov <alexander.vershilov@gmail.com>",
]
edition = "2018"

[dependencies]
chain-core = { path = "../chain-core" }
network-core = { path = "../network-core" }
bytes = "0.4"
futures = "0.1"
http = "0.1.16"
http-connection = "0.1"
hyper = "0.12"
prost = "0.5"
tokio = "0.1"
tower-grpc = "0.1"
tower-service = "0.2"
tower-util = "0.1"

[dependencies.tower-hyper]
git = "https://github.com/tower-rs/tower-hyper"
rev = "4d2219df6fe0e40d203e798ae9c2222a1c38fbf1"

[dependencies.tower-request-modifier]
git = "https://github.com/tower-rs/tower-http"
rev = "707a91db820b736da2f3e950c94383cda0088f43"

[build-dependencies]
tower-grpc-build = { version = "0.1", features = ["tower-hyper"] }
