[package]
name = "ouroboros-praos"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "Ouroboros", "Crypto", "Praos", "VRF" ]

[dependencies]
curve25519-dalek = "0.21"
sha2 = "^0.7"
digest = "^0.7"
generic-array = "^0.9"
rand = "0.6"
