[package]
name = "blockchain"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]
edition = "2021"

[dependencies]
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "catalyst-fund9.1-dev" }
chain-time           = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "catalyst-fund9.1-dev"}
thiserror = "1.0.30"
lru       = "0.7"
