[package]
name = "kms"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chain-impl-mockchain = { path = "../../chain-deps/chain-impl-mockchain" }
blockchain = { path = "../blockchain" }
thiserror = "1.0.20"
hex = "0.4.2"
rand = "0.7"